--- a/src/sections/About/Skills/skills.module.scss
+++ b/src/sections/About/Skills/skills.module.scss
@@ -5,14 +5,13 @@
   .subheading {
     @include respond(phone) {
       text-align: center;
-      margin-bottom: 3rem;
+      padding-top: 27rem;
     }
   }
 
   .skill_rack {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 4rem;
 
     @include respond(phone) {
       justify-content: space-around;
